# varRCWA

./: .gitignore  CMakeLists.txt  README.md  contour_extract.gds
cmake/: FindEigen3.cmake  FindMKL.cmake  FindTBB.cmake  sploosh_utils.cmake
src/core/: DifferentialIntegrator.cpp  DifferentialIntegrator.h  GDSIISampler.cpp  GDSIISampler.h  LayerSampler.cpp  LayerSampler.h  Material.cpp  Material.h  RCWAIntegrator.cpp  RCWAIntegrator.h  RedhefferIntegrator.cpp  RedhefferIntegrator.h  VarLayerSampler.cpp  VarLayerSampler.h
src/gpu/: CudaFourierSolver2D.cu  CudaFourierSolver2D.h  CudaLayerSampler.cu  CudaLayerSampler.h  DifferentialIntegratorGPU.cpp  DifferentialIntegratorGPU.h  GDSIISamplerGPU.cpp  GDSIISamplerGPU.h  MathKernelFunction.cu  MathKernelFunction.h  RCWAIntegratorGPU.cpp  RCWAIntegratorGPU.h  RedhefferIntegratorGPU.cpp  RedhefferIntegratorGPU.h  VarLayerSamplerGPU.cpp  VarLayerSamplerGPU.h  builder.cu  builder.h  types.cuh
src/rcwa/: BlockToeplitzMatrixXcs.cpp  BlockToeplitzMatrixXcs.h  Colormap.h  FourierSolver1D.cpp  FourierSolver1D.h  FourierSolver2D.cpp  FourierSolver2D.h  Layer.cpp  Layer.h  MKLEigenSolver.hpp  MathFunction.h  PMLSolver1D.cpp  PMLSolver1D.h  Parameterization.cpp  Parameterization.h  RCWAScatterMatrix.cpp  RCWAScatterMatrix.h  RCWASolver.cpp  RCWASolver.h  ToeplitzMatrixXcs.cpp  ToeplitzMatrixXcs.h  WaveEquationSolver.cpp  WaveEquationSolver.h  defns.h
src/tests/: CMakeLists.txt  test_cpu.cpp  test_cpu_differential_method.cpp  test_gds_cpu.cpp  test_gds_gpu.cpp  test_gpu.cpp  test_metasurface_cpu.cpp  test_metasurface_gpu.cpp  test_oe_model_gpu.cpp
src/utils/: timer.hpp
